[gd_scene load_steps=18 format=3 uid="uid://c2k6lpae18q8v"]

[ext_resource type="Script" uid="uid://cg631qc3q0klc" path="res://scenes/shop/shop.gd" id="1_oqoy8"]
[ext_resource type="Script" uid="uid://ch4h3vgonrwk2" path="res://resources/custom_resources/relic.gd" id="2_2rexp"]
[ext_resource type="Texture2D" uid="uid://bj3im6egs4wxx" path="res://assets/characters/tile_0086.png" id="2_41omk"]
[ext_resource type="Resource" uid="uid://bvonlfum8708o" path="res://scripts/relics/membership_card.tres" id="2_ccxow"]
[ext_resource type="Resource" uid="uid://dprcg0tbjp0pj" path="res://scripts/relics/mercury_hourglass.tres" id="3_7lk2o"]
[ext_resource type="Texture2D" uid="uid://cvtonr5sinxbx" path="res://assets/characters/shopkeeper_blink.png" id="3_uthr0"]
[ext_resource type="PackedScene" uid="uid://d24w6bygugbhd" path="res://scenes/shop/shop_card.tscn" id="4_2u2et"]
[ext_resource type="Resource" uid="uid://h5kydtcjwww" path="res://scripts/relics/slavers_collar.tres" id="4_4u268"]
[ext_resource type="PackedScene" uid="uid://dlt6561ywjx8m" path="res://scenes/shop/shop_relic.tscn" id="5_m1t66"]
[ext_resource type="PackedScene" uid="uid://iprni3gicvfa" path="res://scenes/shop/delete_card.tscn" id="10_fo0t4"]
[ext_resource type="PackedScene" uid="uid://ctvxie3ni1ik4" path="res://scenes/modifier_handler/modifier_handler.tscn" id="11_863hj"]
[ext_resource type="PackedScene" uid="uid://bqefj5q31b84i" path="res://scenes/modifier_handler/modifier.tscn" id="12_xf6l8"]

[sub_resource type="Gradient" id="Gradient_sv6qe"]
offsets = PackedFloat32Array(0.2125, 1)
colors = PackedColorArray(0.0291667, 0.0291667, 0.0291667, 1, 0.258824, 0.145098, 0.133333, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lpow7"]
gradient = SubResource("Gradient_sv6qe")
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)
metadata/_snap_enabled = true
metadata/_snap_count = 8

[sub_resource type="Animation" id="Animation_wctye"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shopkeeper:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_41omk")]
}

[sub_resource type="Animation" id="Animation_1lyhw"]
resource_name = "blink"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shopkeeper:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_uthr0"), ExtResource("2_41omk")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c4845"]
_data = {
&"RESET": SubResource("Animation_wctye"),
&"blink": SubResource("Animation_1lyhw")
}

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_oqoy8")
shop_relics = Array[ExtResource("2_2rexp")]([ExtResource("2_ccxow"), ExtResource("3_7lk2o"), ExtResource("4_4u268")])

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Background" type="TextureRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_lpow7")

[node name="DecorationLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Shopkeeper" type="TextureRect" parent="DecorationLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -90.0
offset_right = 90.0
offset_bottom = -10.0
grow_vertical = 0
texture = ExtResource("2_41omk")
expand_mode = 1
stretch_mode = 5

[node name="ShopkeeperAnimation" type="AnimationPlayer" parent="DecorationLayer"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_c4845")
}

[node name="BlinkTimer" type="Timer" parent="DecorationLayer"]
unique_name_in_owner = true
one_shot = true

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 2

[node name="BackButton" type="Button" parent="UILayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.0
offset_top = 49.0
offset_right = -103.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2
text = "Leave  "
alignment = 2

[node name="ShopContent" type="VBoxContainer" parent="UILayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.0
offset_top = -45.0
offset_right = 113.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2

[node name="Cards" type="HBoxContainer" parent="UILayer/ShopContent"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="ShopCard" parent="UILayer/ShopContent/Cards" instance=ExtResource("4_2u2et")]
layout_mode = 2

[node name="ShopCard2" parent="UILayer/ShopContent/Cards" instance=ExtResource("4_2u2et")]
layout_mode = 2

[node name="ShopCard3" parent="UILayer/ShopContent/Cards" instance=ExtResource("4_2u2et")]
layout_mode = 2

[node name="ShopCard4" parent="UILayer/ShopContent/Cards" instance=ExtResource("4_2u2et")]
layout_mode = 2

[node name="ShopCard5" parent="UILayer/ShopContent/Cards" instance=ExtResource("4_2u2et")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/ShopContent"]
layout_mode = 2
theme_override_constants/separation = 4
alignment = 1

[node name="ColorlessCards" type="HBoxContainer" parent="UILayer/ShopContent/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(84, 52)
layout_mode = 2

[node name="ShopCard6" parent="UILayer/ShopContent/HBoxContainer/ColorlessCards" instance=ExtResource("4_2u2et")]
layout_mode = 2

[node name="ShopCard7" parent="UILayer/ShopContent/HBoxContainer/ColorlessCards" instance=ExtResource("4_2u2et")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/ShopContent/HBoxContainer"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2

[node name="Relics" type="HBoxContainer" parent="UILayer/ShopContent/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="ShopRelic" parent="UILayer/ShopContent/HBoxContainer/VBoxContainer/Relics" instance=ExtResource("5_m1t66")]
layout_mode = 2

[node name="ShopRelic2" parent="UILayer/ShopContent/HBoxContainer/VBoxContainer/Relics" instance=ExtResource("5_m1t66")]
layout_mode = 2

[node name="ShopRelic3" parent="UILayer/ShopContent/HBoxContainer/VBoxContainer/Relics" instance=ExtResource("5_m1t66")]
layout_mode = 2

[node name="Potions" type="HBoxContainer" parent="UILayer/ShopContent/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="ShopRelic" parent="UILayer/ShopContent/HBoxContainer/VBoxContainer/Potions" instance=ExtResource("5_m1t66")]
layout_mode = 2

[node name="ShopRelic2" parent="UILayer/ShopContent/HBoxContainer/VBoxContainer/Potions" instance=ExtResource("5_m1t66")]
layout_mode = 2

[node name="ShopRelic3" parent="UILayer/ShopContent/HBoxContainer/VBoxContainer/Potions" instance=ExtResource("5_m1t66")]
layout_mode = 2

[node name="DeleteCard" parent="UILayer/ShopContent/HBoxContainer" instance=ExtResource("10_fo0t4")]
unique_name_in_owner = true
layout_mode = 2

[node name="ModifierHandler" parent="." instance=ExtResource("11_863hj")]

[node name="ShopCostModifier" parent="ModifierHandler" instance=ExtResource("12_xf6l8")]
type = 3

[connection signal="pressed" from="UILayer/BackButton" to="." method="_on_back_button_pressed"]
